crates/wac-parser/tests/parser/fail/missing-semi.wac
package test:comp;

type x = u32